[gd_scene load_steps=4 format=3 uid="uid://dpgcc4nrtwyqn"]

[ext_resource type="Script" uid="uid://ck1gn1tlsxphd" path="res://02_Scripts/UI/main_menu.gd" id="1_araup"]
[ext_resource type="Script" uid="uid://b24hbx0n27he6" path="res://02_Scripts/UI/dynamic_button.gd" id="3_8dn53"]

[sub_resource type="Theme" id="Theme_l6cm7"]
RichTextLabel/colors/font_selected_color = Color(0.615686, 0, 0, 1)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 24
RichTextLabel/constants/shadow_offset_x = -10
RichTextLabel/constants/shadow_offset_y = 6
RichTextLabel/constants/shadow_outline_size = 24
RichTextLabel/font_sizes/bold_font_size = 64
RichTextLabel/font_sizes/bold_italics_font_size = 64
RichTextLabel/font_sizes/italics_font_size = 64
RichTextLabel/font_sizes/mono_font_size = 64
RichTextLabel/font_sizes/normal_font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_araup")

[node name="Background" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 0
offset_left = 684.0
offset_right = 2604.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="BG" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -689.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Background/CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme = SubResource("Theme_l6cm7")
bbcode_enabled = true
text = "[color=orange][shake]Profundus[/shake][/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="." groups=["Music"]]

[node name="Menu" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 0
offset_left = 684.0
offset_right = 2604.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -255.0
offset_right = 292.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.29803923, 0.6745098, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Buttons" type="GridContainer" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="New Game" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "New Game"
script = ExtResource("3_8dn53")

[node name="Settings" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Settings"
script = ExtResource("3_8dn53")

[node name="Quit" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Quit"
script = ExtResource("3_8dn53")

[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
